--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,6 +6,7 @@
   <meta charset="utf-8">
   <title>JD Quiz - HTMX</title>
   <meta name="description" content="JD Quiz made with HTMX">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://unpkg.com/htmx.org@1.9.4"></script>
   <link href="/css/output.css" rel="stylesheet" type="text/css">
 
