--- a/views/valanswers.ejs
+++ b/views/valanswers.ejs
@@ -41,7 +41,7 @@
                     hx-swap="innerHTML" >
                 <%= decode(answers[i]) %>
             </button>
-        <% } else if (!correct && answers[i] == results.correct_answer) { %>
+        <% } else if (!correct && decode(answers[i]) == decode(results.correct_answer)) { %>
             <button disabled="true"
                     class="bg-green-500 m-0.5 w-full text-white font-bold py-2 px-4 rounded cursor-not-allowed" 
                     hx-post="/valanswers" 
